[package]
name = "mqtt-kafka-rust-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"

tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3"
rdkafka = "0.28.0"

paho-mqtt = {version ="0.10.0"}
openssl = { version = "0.10", features = ["vendored"] }